--- a/frontend/src/assets/scss/backend/layouts/_dashboard-1.scss
+++ b/frontend/src/assets/scss/backend/layouts/_dashboard-1.scss
@@ -556,3 +556,7 @@ div#nav-collapse .navbar-nav
         margin-bottom: 80px;
     }
 }
+
+.container-fluid .icon.icon-grid.i-grid {
+    width: 100%;
+}
